@@ -1,28 +1,37 @@
 """Tests for packaging.command.install_data."""
 import os
+import sys
 import sysconfig
+import packaging.database
 from sysconfig import _get_default_scheme
 from packaging.tests import unittest, support
 from packaging.command.install_data import install_data
+from packaging.command.install_dist import install_dist
+from packaging.command.install_distinfo import install_distinfo
 
 
 class InstallDataTestCase(support.TempdirManager,
                           support.LoggingCatcher,
                           unittest.TestCase):
 
-    def test_simple_run(self):
+    def setUp(self):
+        super(InstallDataTestCase, self).setUp()
         scheme = _get_default_scheme()
         old_items = sysconfig._SCHEMES.items(scheme)
+
         def restore():
             sysconfig._SCHEMES.remove_section(scheme)
             sysconfig._SCHEMES.add_section(scheme)
             for option, value in old_items:
                 sysconfig._SCHEMES.set(scheme, option, value)
+
         self.addCleanup(restore)
 
+    def test_simple_run(self):
         pkg_dir, dist = self.create_dist()
         cmd = install_data(dist)
         cmd.install_dir = inst = os.path.join(pkg_dir, 'inst')
+        scheme = _get_default_scheme()
 
         sysconfig._SCHEMES.set(scheme, 'inst',
                                os.path.join(pkg_dir, 'inst'))
@@ -67,8 +76,7 @@ class InstallDataTestCase(support.TempdirManager,
         three = os.path.join(cmd.install_dir, 'three')
         self.write_file(three, 'xx')
 
-        sysconfig._SCHEMES.set(scheme, 'inst3',
-                               cmd.install_dir)
+        sysconfig._SCHEMES.set(scheme, 'inst3', cmd.install_dir)
 
         cmd.data_files = {one: '{inst}/one', two: '{inst2}/two',
                           three: '{inst3}/three'}
@@ -79,6 +87,49 @@ class InstallDataTestCase(support.TempdirManager,
         self.assertEqual(len(cmd.get_outputs()), 3)
         self.assertTrue(os.path.exists(os.path.join(inst2, rtwo)))
         self.assertTrue(os.path.exists(os.path.join(inst, rone)))
+
+    def test_resources(self):
+        install_dir = self.mkdtemp()
+        scripts_dir = self.mkdtemp()
+        project_dir, dist = self.create_dist(
+            name='Spamlib', version='0.1',
+            data_files={'spamd': '{scripts}/spamd'})
+
+        os.chdir(project_dir)
+        self.write_file('spamd', '# Python script')
+        sysconfig._SCHEMES.set(_get_default_scheme(), 'scripts', scripts_dir)
+        sys.path.insert(0, install_dir)
+        self.addCleanup(sys.path.remove, install_dir)
+
+        cmd = install_dist(dist)
+        cmd.outputs = ['spamd']
+        cmd.install_lib = install_dir
+        dist.command_obj['install_dist'] = cmd
+
+        cmd = install_data(dist)
+        cmd.install_dir = install_dir
+        cmd.ensure_finalized()
+        dist.command_obj['install_data'] = cmd
+        cmd.run()
+
+        cmd = install_distinfo(dist)
+        cmd.ensure_finalized()
+        dist.command_obj['install_distinfo'] = cmd
+        cmd.run()
+
+        fn = os.path.join(install_dir, 'Spamlib-0.1.dist-info', 'RESOURCES')
+        with open(fn, encoding='utf-8') as fp:
+            content = fp.read().strip()
+
+        expected = 'spamd,%s' % os.path.join(scripts_dir, 'spamd')
+        self.assertEqual(content, expected)
+
+        # just to be sure, we also test that get_file works here, even though
+        # packaging.database has its own test file
+        with packaging.database.get_file('Spamlib', 'spamd') as fp:
+            content = fp.read()
+
+        self.assertEqual('# Python script', content)
 
 
 def test_suite():
